Fix text overflow in Request Header Parser Microservice

--- a/Apis_And_Microservices_Certification/Exercise_Tracker/style.css
+++ b/Apis_And_Microservices_Certification/Exercise_Tracker/style.css
@@ -70,7 +70,7 @@ input[type=submit]:hover {
     color: white;
     padding: 1rem;
     margin: 0;
-    word-break: break-all;
+    word-break: break-word;
 }
 #api-response {
     font-family: monospace;
