--- a/Apis_And_Microservices_Certification/File_Metadata_Microservice/style.css
+++ b/Apis_And_Microservices_Certification/File_Metadata_Microservice/style.css
@@ -32,6 +32,7 @@ button, input[type=submit] {
   background: #f2f2f2;
   color: black;
   padding: 1rem;
+  word-break: break-word;
 }
 footer {
   background: rgba(0, 0, 0, 0.1);
