--- a/Apis_And_Microservices_Certification/Request_Header_Parser_Microservice/style.css
+++ b/Apis_And_Microservices_Certification/Request_Header_Parser_Microservice/style.css
@@ -38,11 +38,13 @@ main > * {
   background: #333;
   color: white;
   padding: 1rem;
+  word-break: break-word;
 }
 footer {
   background: rgba(0, 0, 0, 0.2);
   padding: 1rem;
   text-align: center;
+  color: white;
 }
 
 @media only screen and (min-width: 992px) {
